--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
   <meta
-    content="I'm a graduate of MIT's Class of 2018 and current M.Eng. student, and my passion is Computer Science. My interests include artificial intelligence, machine learning, computer vision, and natural language processing. I'm currently a graduate student working towards my Master of Engineering (M.Eng.) degree in Computer Science/Artificial Intelligence."
+    content=" I'm a graduate of Asia Pacific Institute of BCA Class of 2024 and my passion is Data Science. My interests include machine learning, artificial intelligence,Deep learning,computer vision,large language
+    model and natural language processing.."
     name="description" />
   <meta content="Eric Wadkins" name="author" />
   <meta
@@ -873,58 +874,6 @@
             </div>
           </div>
         </div>
-        <!-- <div class="container">
-          <div class="row">
-            <div class="col-lg-10 mx-auto">
-              <div class="modal-body">
-                <h2>
-                  Neural Model Library
-                </h2>
-                <p class="lead">
-                  Simple creation of feed forward and recurrent neural models in Tensorflow.
-                </p>
-                <p class="lead">
-                  This library enables incredibly simple creation of feed forward and recurrent neural models in
-                  TensorFlow. Simply specify the input shape, output shape, and a list of components (or layers) to make
-                  up the network. The library then figures out the dimensions of each component, initializes each
-                  component, and builds the model automatically. Most importantly, the model is able to infer the sizes
-                  of intermediate layers (including recurrent inputs) automatically, requiring you to only specify the
-                  essentials. This enables you to make quick changes to your entire model in just a few lines.
-                </p>
-                <p class="lead">
-                  Several of my friends have commented that, in working on this project, I've essentially just
-                  re-created Keras in Tensorflow. In retrospect, it is quite similar to Keras's Sequential model
-                  framework, with the addition of being capable of recurrent connections throughout the sequential
-                  model. Nonetheless, it was a good learning experience.
-                </p>
-                <p class="lead">
-                  More detailed project description coming soon!
-                  <br />
-                  In the meantime, check out some of my other projects.
-                </p>
-           
-                <div class="lead mb-4">
-                  <b>
-                    View this project on GitHub:
-                  </b>
-                  <a href="https://github.com/ewadkins/NeuralModel" target="blank">
-                    https://github.com/ewadkins/NeuralModel
-                  </a>
-                  <iframe allowtransparency="true" class="mt-2" frameborder="0" height="180" scrolling="0"
-                    src="http://lab.lepture.com/github-cards/card.html?user=ewadkins&amp;repo=NeuralModel"
-                    style="max-width: 70vw" width="400">
-                  </iframe>
-                  <br />
-                </div>
-                <a class="btn btn-dark btn-l" data-dismiss="modal" href="#">
-                  <i class="fa fa-times">
-                  </i>
-                  Close Project
-                </a>
-              </div>
-            </div>
-          </div>
-        </div> -->
 
         <div class="container">
           <div class="row">
@@ -1104,211 +1053,6 @@
       </div>
     </div>
   </div>
-  <!-- <div aria-hidden="true" class="portfolio-modal modal fade" id="portfolioModal4" role="dialog" tabindex="-1">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl">
-            </div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-10 mx-auto">
-              <div class="modal-body">
-                <h2>
-                  Collage Generator
-                </h2>
-                <p class="lead">
-                  Intelligently draws a message with images.
-                </p>
-                <img alt="Intelligently draws messages with images" class="img-fluid d-block mx-auto"
-                  src="img/collage_big.jpg" />
-                <p class="lead">
-                  Collage Generator uses machine learning techniques, such as K-Means Clustering, to determine which
-                  images should be used to draw the message and which to use as the background.
-                </p>
-                <p class="lead">
-                  Given a single set of images (.zip file) and a message to display, my Collage Generator returns a high
-                  resolution collage with the message drawn out using the images. It works by determining a subset of
-                  images that are the most distinct and drawing the message with those and the background with the
-                  others.
-                </p>
-                <div class="lead mb-4">
-                  <b>
-                    View this project on GitHub:
-                  </b>
-                  <a href="https://github.com/ewadkins/CollageGenerator" target="blank">
-                    https://github.com/ewadkins/CollageGenerator
-                  </a>
-                  <iframe allowtransparency="true" class="mt-2" frameborder="0" height="180" scrolling="0"
-                    src="http://lab.lepture.com/github-cards/card.html?user=ewadkins&amp;repo=CollageGenerator"
-                    style="max-width: 70vw" width="400">
-                  </iframe>
-                  <br />
-                </div>
-                <a class="btn btn-dark btn-l" data-dismiss="modal" href="#">
-                  <i class="fa fa-times">
-                  </i>
-                  Close Project
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div aria-hidden="true" class="portfolio-modal modal fade" id="portfolioModal5" role="dialog" tabindex="-1">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl">
-            </div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-10 mx-auto">
-              <div class="modal-body">
-                <h2>
-                  OpenGL Game Engine
-                </h2>
-                <p class="lead">
-                  A custom game engine including dynamic lighting, terrain, and static and dynamic objects.
-                </p>
-                <img alt="Custom OpenGL game engine" class="img-fluid d-block mx-auto"
-                  src="img/gameengine_big.png" />
-                <p class="lead">
-                  A custom game engine created from scratch in C++ using OpenGL.
-                </p>
-                <p class="lead">
-                  This includes GLSL shader support for dynamic lighting (ambient, diffuse, and specular) and multiple
-                  light sources, algorithms to generate multiple different types of terrain (the images above show
-                  fractal-generated mountains and hills, respectively), and an intuitive object rendering system that
-                  handles both static and dynamic objects.
-                </p>
-                <p class="lead">
-                  A previous version of this game engine created in Java using
-                  <a href="https://www.lwjgl.org/" target="blank">
-                    LWJGL
-                  </a>
-                  and the
-                  <a href="http://jbullet.advel.cz/" target="blank">
-                    JBullet Physics Library
-                  </a>
-                  also includes a customizable object UI and real-time physics that can be used to simulate complicated
-                  collisions.
-                </p>
-                <div class="lead mb-4">
-                  <b>
-                    View this project on GitHub:
-                  </b>
-                  <a href="https://github.com/ewadkins/OpenGLGameEngine" target="blank">
-                    https://github.com/ewadkins/OpenGLGameEngine
-                  </a>
-                  <iframe allowtransparency="true" class="mt-2" frameborder="0" height="180" scrolling="0"
-                    src="http://lab.lepture.com/github-cards/card.html?user=ewadkins&amp;repo=OpenGLGameEngine"
-                    style="max-width: 70vw" width="400">
-                  </iframe>
-                  <br />
-                </div>
-                <a class="btn btn-dark btn-l" data-dismiss="modal" href="#">
-                  <i class="fa fa-times">
-                  </i>
-                  Close Project
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div aria-hidden="true" class="portfolio-modal modal fade" id="portfolioModal6" role="dialog" tabindex="-1">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl">
-            </div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-10 mx-auto">
-              <div class="modal-body">
-                <h2>
-                  Ray Casting Simulation
-                </h2>
-                <p class="lead">
-                  A simulation using AI techniques such as ray casting, spatial mapping, Bayesian filtering,
-                  pathfinding, etc.
-                </p>
-                <img alt="AI simulation using Ray Casting" class="img-fluid d-block mx-auto"
-                  src="img/raycast_big.png" />
-                <p class="lead">
-                  An AI which simulates a robot that uses AI techniques to perform tasks such as estimating its location
-                  on a map and navigating towards a goal through an unknown maze in real time.
-                </p>
-                <p class="lead">
-                  Given an image, the simulation creates a map and uses AI techniques such as ray casting, spatial
-                  mapping, Bayesian filtering, and pathfinding to perform tasks such as navigating from a start to a
-                  goal given
-                  <strong>
-                    no knowledge
-                  </strong>
-                  of the layout the map (as shown in the image above), or determine its location within the map based on
-                  the features of the map it has encountered so far.
-                </p>
-                <video autoplay="" controls="" height="450" id="raycastVideo" width="450">
-                  <source src="/vid/raycast_video.mp4" type="video/mp4" />
-                  Your browser does not support the video tag.
-                </video>
-                <script>
-                  document.getElementById('raycastVideo').addEventListener('ended', function (e) {
-                    setTimeout(function () {
-                      document.getElementById('raycastVideo').play();
-                    }, 2000);
-                  }, false);
-                </script>
-                <p class="lead">
-                  The above video shows the AI navigate through the maze from start to goal without any prior knowledge
-                  of the map. This is done solely by collecting data from its sensors (the rays are shown in red) which
-                  report distances to obstacles, and then using techniques such as spatial mapping and pathfinding
-                  (modified
-                  <a href="https://en.wikipedia.org/wiki/A*_search_algorithm" target="blank">
-                    A* algorithm
-                  </a>
-                  ).
-                </p>
-                <div class="lead mb-4">
-                  <b>
-                    View this project on GitHub:
-                  </b>
-                  <a href="https://github.com/ewadkins/RayCastingSimulation" target="blank">
-                    https://github.com/ewadkins/RayCastingSimulation
-                  </a>
-                  <iframe allowtransparency="true" class="mt-2" frameborder="0" height="180" scrolling="0"
-                    src="http://lab.lepture.com/github-cards/card.html?user=ewadkins&amp;repo=RayCastingSimulation"
-                    style="max-width: 70vw" width="400">
-                  </iframe>
-                  <br />
-                </div>
-                <a class="btn btn-dark btn-l" data-dismiss="modal" href="#">
-                  <i class="fa fa-times">
-                  </i>
-                  Close Project
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
 
   <!-- Scroll to Top Button-->
   <a class="scroll-to-top js-scroll-trigger" href="#page-top">
